# goatLLM

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  DESIGN_MODE_PLAN.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts.map  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_agent_events.sql  003_pinned.sql  004_embeddings.sql  005_archive_tags.sql  006_mode_workspace.sql  007_thinking_content.sql  008_turn_metadata.sql  009_memory.sql  011_citations.sql  012_document_workspaces.sql  013_scheduled_agent_runs.sql  014_memory_extraction.sql  015_meeting_assistant.sql  016_compaction_entries.sql  017_discovered_models.sql  018_context_usage.sql  019_notebooks.sql
src-tauri/src/: jj.rs  lib.rs  main.rs  mcp.rs  ollama.rs  searxng.rs
src-tauri/src/commands/: codex.rs  db.rs  discovered_models.rs  documents.rs  embeddings.rs  extract.rs  files.rs  git.rs  latex.rs  meetings.rs  memory.rs  misc.rs  mod.rs  scheduled_agents.rs  search.rs  tools.rs  workspace.rs
src-tauri/src/commands/embeddings/: tests.rs
src-tauri/src/commands/extract/: ocr_audio.rs  office.rs  pdf_images.rs  tests.rs
src-tauri/src/commands/files/: tests.rs  workspace_files.rs
src-tauri/src/commands/search/: tests.rs
(+538 files in other folders)
