[package]
name = "goatllm"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
glob = "0.3"
tempfile = "3"
base64 = "0.22"
pdf-extract = "0.7"
zip = "0.6"
calamine = "0.24"
quick-xml = "0.31"
dirs = "5"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
